# retuve-yolo-plugin

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
retuve_yolo_plugin/: ultrasound.py  utils.py  xray.py  xray_utils.py
tests/: conftest.py  test_api.py  test_clis.py  test_main.py
